anno-server: DELETE / to wipe store
